# OpenCV-cookbook

./: 03_channels.py  05_geometrical_shapes.py  06_image_thresholding.py  07_adaptive_thresholding.py  08_track_bar.py  08_track_bar2.py  10_gaussian_blur.py  11_average_blur.py  13_laplacian.py  14_morphological_transformation.py  15_sobel_operator.py  16_canny_edge_detection.py  17_object_detection_hsv.py  18_image_pyramid.py  19_essential_functions.py  20_transformations.py  21_contours.py  22_color_space.py  23_bitwise_operations.py  24_masking.py  25_histogram.py  26_gradients.py  27_haar_casecade.py  28_stack_images.py  29_all_in_one.py  README.md  adaptive_thresholding.py  average_blur.py  canny_edge_detection.py  channels.py  face_recognition.py  gaussian_blur.py  geometrical_shapes.py  image_pyramid.py  image_thresholding.py  intro.py  laplacian.py  logger.py  median_blur.py  morphological_transformation.py  (+8 more)
projects/face_detection/: main.py
