[tool.poetry]
name = "opencv-cookbook"
version = "0.1.0"
description = "My Computer Vision practices using opencv python library🤖 . contain various code snippets, turning images into insights. From filters to face recognition, savor the art of OpenCV magic! 🚀"
authors = ["Izam Mohammed"]
license = "Apatche"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
numpy = "^2.0.1"
typing-extensions = "^4.12.2"
matplotlib = "^3.9.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
